Updated 007 + index.html and README

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Modern Javascript By Example</title>
+    <title>Modern JavaScript By Example</title>
   </head>
   <body>
     <div id="root"></div>
